Fix Threads content being mis-aligned

--- a/components/Community/community.css
+++ b/components/Community/community.css
@@ -143,8 +143,6 @@ hr {
 
 .threads {
   display: flex;
-  align-items: right;
-  justify-content: center;
   width: 100%;
   padding: 0.5% 0.3%;
   margin-left: 0.1%;
@@ -154,7 +152,6 @@ hr {
 
 .scheduled-events {
   display: flex;
-  align-items: left;
   justify-content: center;
   width: 90%;
   padding: 0.5% 0.3%;
